<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_delivery">

    <fragment
        android:id="@+id/navigation_delivery"
        android:name="com.example.zomato.fragment.ui.delivery.DeliveryFragment"
        android:label="@string/title_delivery"
        tools:layout="@layout/fragment_delivery" />

    <fragment
        android:id="@+id/navigation_dining"
        android:name="com.example.zomato.fragment.ui.dining.DiningFragment"
        android:label="@string/title_dining"
        tools:layout="@layout/fragment_dining" />

    <fragment
        android:id="@+id/navigation_money"
        android:name="com.example.zomato.fragment.ui.money.MoneyFragment"
        android:label="@string/title_money"
        tools:layout="@layout/fragment_money" />
</navigation>