<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_foodImage"
                android:layout_width="106dp"
                android:layout_height="109dp"
                android:src="@drawable/foodimage" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_foodName"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/hangout_cak"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/hangout_cak" />

                <TextView
                    android:id="@+id/making_type"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/bakery"
                    android:textAppearance="@style/bakery"

                    />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="7dp"
                        android:src="@drawable/clock" />

                    <TextView

                        android:id="@+id/time_to_deliver"
                        android:layout_width="52dp"
                        android:layout_height="24dp"

                        android:gravity="center_horizontal|top"
                        android:text="@string/min"
                        android:textAppearance="@style/min" />


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>